# nfl-big-data-bowl-2025-kaggle

./: .gitignore  README.md  pyproject.toml  requirements.txt
nfl_data_bowl/: ensemble_trainer.py  train.py  train_xgb.py
nfl_data_bowl/data_utils/: data_common.py  data_historical.py  data_historical_with_norm.py  data_updated.py  data_xgb.py
nfl_data_bowl/models/: analyzable_gnn.py  gnn_historical_enhanced.py  gnn_strict.py
nfl_data_bowl/utils/: detailed_evaluation.py  embedding_visualization.py  evaluate.py  graph_processing.py  route_plotting.py
notebooks/: compare-all-models.ipynb  player-embeddings.ipynb  post-training-prediction-analysis.ipynb
